--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
 								<a href="#" class="image featured"><img src="./images/low-cost.jpg" alt="" /></a>
 								<h3>A Low-cost RFID System for Distributed Parallel Sensing</h3>
 								<div align="left">
-								<p><strong>Key techniques：</strong> RFID，Software Defined Reader，Cross-technology communication, Distributed sensing<br /><strong>Publications:</strong><br >[1] <font color="#FF0000">[IEEE IOTJ]</font> <strong>Yanwen Wang</strong>, Jiannong Cao and Yuanqing Zheng, "Towards A Low-cost Software-Defined UHF RFID System for Distributed Parallel Sensing," in IEEE Internet of Things Journal, 2021. <strong>(SCI, JCR Q1) </strong> <a href="./papers/low-cost.pdf"><i class="fa fa-file-pdf-o" style="font-size:24px;color:red"></i></a></p>
+								<p><strong>Key techniques：</strong> RFID, Software Defined Reader, Cross-technology communication, Distributed sensing<br /><strong>Publications:</strong><br >[1] <font color="#FF0000">[IEEE IOTJ]</font> <strong>Yanwen Wang</strong>, Jiannong Cao and Yuanqing Zheng, "Towards A Low-cost Software-Defined UHF RFID System for Distributed Parallel Sensing," in IEEE Internet of Things Journal, 2021. <strong>(SCI, JCR Q1) </strong> <a href="./papers/low-cost.pdf"><i class="fa fa-file-pdf-o" style="font-size:24px;color:red"></i></a></p>
 								</div>
 							</article>
 						</div>		
@@ -176,7 +176,7 @@
 								<a href="#" class="image featured"><img src="./images/shakereader.jpg" alt="" /></a>
 								<h3>Let smartphones 'read' tags</h3>
 								<div align="left">
-								<p><strong>Key techniques：</strong> RFID，Gesture identification<br /><strong>Publications:</strong><br >[1] <font color="#FF0000">[TMC]</font> Kaiyan Cui, <strong>Yanwen Wang</strong>, Yuanqing Zheng and Jinsong Han, "ShakeReader: 'Read' UHF RFID using Smartphone, accepted in IEEE TMC, 2021. <strong>(CCF A)</strong><br />[2] <font color="#FF0000">[INFOCOM 2021]</font> K. Cui, <strong>Y. Wang</strong>, Y. Zheng and J. Han.  "ShakeReader: 'Read' UHF RFID using Smartphone, in IEEE INFOCOM 2021. <strong>(CCF A) </strong><a href="./papers/shakereader.pdf"><i class="fa fa-file-pdf-o" style="font-size:24px;color:red"></i></a> <a href="./papers/shakereader_slides.pdf"><i class="fa fa-file-powerpoint-o" style="font-size:24px;color:red"></i></a></p>
+								<p><strong>Key techniques：</strong> RFID, Antenna Polarization, Gesture identification<br /><strong>Publications:</strong><br >[1] <font color="#FF0000">[TMC]</font> K. Cui, <strong>Y. Wang</strong>, Y. Zheng and J. Han, "ShakeReader: 'Read' UHF RFID using Smartphone, in IEEE TMC, 2021. <strong>(CCF A)</strong><br />[2] <font color="#FF0000">[INFOCOM 2021]</font> K. Cui, <strong>Y. Wang</strong>, Y. Zheng and J. Han.  "ShakeReader: 'Read' UHF RFID using Smartphone, in IEEE INFOCOM 2021. <strong>(CCF A) </strong><a href="./papers/shakereader.pdf"><i class="fa fa-file-pdf-o" style="font-size:24px;color:red"></i></a> <a href="./papers/shakereader_slides.pdf"><i class="fa fa-file-powerpoint-o" style="font-size:24px;color:red"></i></a></p>
 								</div>
 							</article>
 						</div>
@@ -196,7 +196,7 @@
 								<a href="#" class="image featured"><img src="./images/pic02.jpg" alt="" /></a>
 								<h3>Activity Recognition</h3>
 								<div align="left">
-								<p><strong>Key techniques：</strong> RFID，Reflection modeling，Signal processing，Classification<br /><strong>Publications:</strong><br >[1] <font color="#FF0000">[UbiComp'19]</font> <strong>Y. Wang</strong> and Y. Zheng. "Modeling RFID Signal Reflection for Contact-free Activity Recognition," in ACM UbiComp 2019. <strong>(CCF A)</strong> <a href="./papers/ubicomp2019.pdf"><i class="fa fa-file-pdf-o" style="font-size:24px;color:red"></i></a> <a href="./papers/ubicomp_slide.pdf"><i class="fa fa-file-powerpoint-o" style="font-size:24px;color:red"></i></a></p>
+								<p><strong>Key techniques：</strong> RFID, Reflection modeling, Signal processing, Classification<br /><strong>Publications:</strong><br >[1] <font color="#FF0000">[UbiComp'19]</font> <strong>Y. Wang</strong> and Y. Zheng. "Modeling RFID Signal Reflection for Contact-free Activity Recognition," in ACM UbiComp 2019. <strong>(CCF A)</strong> <a href="./papers/ubicomp2019.pdf"><i class="fa fa-file-pdf-o" style="font-size:24px;color:red"></i></a> <a href="./papers/ubicomp_slide.pdf"><i class="fa fa-file-powerpoint-o" style="font-size:24px;color:red"></i></a></p>
 								</div>
 							</article>
 						</div>						
