--- a/chs/index_chs.html
+++ b/chs/index_chs.html
@@ -196,7 +196,7 @@
 								<a href="#" class="image featured"><img src="../images/shakereader.jpg" alt="" /></a>
 								<h3>让智能手机"读"RFID标签</h3>
 								<div align="left">
-								<p><strong>Key techniques：</strong> 射频识别技术，天线极化，手势识别<br /><strong>Publications:</strong><br >[1] <font color="#FF0000">[TMC]</font> K. Cui, <strong>Y. Wang</strong>, Y. Zheng and J. Han, "ShakeReader: 'Read' UHF RFID using Smartphone, in IEEE TMC, 2021. <strong>(CCF A，中科院一区TOP)</strong><br />[2] <font color="#FF0000">[INFOCOM 2021]</font> K. Cui, <strong>Y. Wang</strong>, Y. Zheng and J. Han.  "ShakeReader: 'Read' UHF RFID using Smartphone, in IEEE INFOCOM 2021. <strong>(CCF A)</strong> <a href="../papers/shakereader.pdf"><i class="fa fa-file-pdf-o" style="font-size:24px;color:red"></i></a> <a href="../papers/shakereader_slides.pdf"><i class="fa fa-file-powerpoint-o" style="font-size:24px;color:red"></i></a></p>
+								<p><strong>Key techniques：</strong> 射频识别技术，天线极化，手势识别<br /><strong>Publications:</strong><br >[1] <font color="#FF0000">[TMC]</font> K. Cui, <strong>Y. Wang</strong>, Y. Zheng and J. Han, "ShakeReader: 'Read' UHF RFID using Smartphone," in IEEE TMC, 2021. <strong>(CCF A，中科院一区TOP)</strong><br />[2] <font color="#FF0000">[INFOCOM 2021]</font> K. Cui, <strong>Y. Wang</strong>, Y. Zheng and J. Han, "ShakeReader: 'Read' UHF RFID using Smartphone," in IEEE INFOCOM 2021. <strong>(CCF A)</strong> <a href="../papers/shakereader.pdf"><i class="fa fa-file-pdf-o" style="font-size:24px;color:red"></i></a> <a href="../papers/shakereader_slides.pdf"><i class="fa fa-file-powerpoint-o" style="font-size:24px;color:red"></i></a></p>
 								</div>
 							</article>
 						</div>
