--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
 								<a href="#" class="image featured"><img src="./images/shakereader.jpg" alt="" /></a>
 								<h3>Let smartphones 'read' tags</h3>
 								<div align="left">
-								<p><strong>Key techniques：</strong> RFID, Antenna Polarization, Gesture identification<br /><strong>Publications:</strong><br >[1] <font color="#FF0000">[TMC]</font> K. Cui, <strong>Y. Wang</strong>, Y. Zheng and J. Han, "ShakeReader: 'Read' UHF RFID using Smartphone," in IEEE TMC, 2021. <strong>(CCF A)</strong><br />[2] <font color="#FF0000">[INFOCOM 2021]</font> K. Cui, <strong>Y. Wang</strong>, Y. Zheng and J. Han.  "ShakeReader: 'Read' UHF RFID using Smartphone," in IEEE INFOCOM 2021. <strong>(CCF A) </strong><a href="./papers/shakereader.pdf"><i class="fa fa-file-pdf-o" style="font-size:24px;color:red"></i></a> <a href="./papers/shakereader_slides.pdf"><i class="fa fa-file-powerpoint-o" style="font-size:24px;color:red"></i></a></p>
+								<p><strong>Key techniques：</strong> RFID, Antenna Polarization, Gesture identification<br /><strong>Publications:</strong><br >[1] <font color="#FF0000">[TMC]</font> K. Cui, <strong>Y. Wang</strong>, Y. Zheng and J. Han, "ShakeReader: 'Read' UHF RFID using Smartphone," in IEEE TMC, 2021. <strong>(CCF A)</strong><br />[2] <font color="#FF0000">[INFOCOM 2021]</font> K. Cui, <strong>Y. Wang</strong>, Y. Zheng and J. Han, "ShakeReader: 'Read' UHF RFID using Smartphone," in IEEE INFOCOM 2021. <strong>(CCF A) </strong><a href="./papers/shakereader.pdf"><i class="fa fa-file-pdf-o" style="font-size:24px;color:red"></i></a> <a href="./papers/shakereader_slides.pdf"><i class="fa fa-file-powerpoint-o" style="font-size:24px;color:red"></i></a></p>
 								</div>
 							</article>
 						</div>
