--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
                         <div class="col-12 col-6-medium col-12-small">
 							<article class="box style2">
 								<a href="#" class="image featured"><img src="./images/HearLiquid.jpg" alt="" /></a>
-								<h3>We can HEAR the liquid type</h3>
+								<h3>We can HEAR the liquid fraud</h3>
 								<div align="left">
 								<p><strong>Key techniques：</strong> Acoustic sensing, Auto-encoding, Data augmentation<br /><strong>Publications:</strong><br >[1] <font color="#FF0000">[IEEE IOTJ]</font> Yanni Yang, <strong>Yanwen Wang*</strong>, Jiannong Cao and Jinlin Chen, "HearLiquid: Non-intrusive Liquid Fraud Detection Using Commodity Acoustic Devices," in IEEE Internet of Things Journal, accepted to appear, 2022. <strong>(SCI, JCR Q1) </strong> <!--<a href="./papers/low-cost.pdf"><i class="fa fa-file-pdf-o" style="font-size:24px;color:red"></i></a></p>-->
 								</div>
