--- a/chs/index_chs.html
+++ b/chs/index_chs.html
@@ -69,6 +69,7 @@
 							<a href="#work" class="button large scrolly">我的个人简介</a>
 							<h2><strong></strong><br /></h2>
 							<h2><strong>最新动态</strong><br /></h2>
+							<h4>2022年1月: 我们的工作<font color="#FF0000"> ‘HearLiquid’ </font>被<font color="#0000FF">IEEE IOTJ</font>接收！<br /></h4>
 							<h4>2021年8月: 我们的工作<font color="#FF0000"> ‘RM-Dynamic’ </font>被<font color="#0000FF">IEEE TMC</font>接收！<br /></h4>
 							<h4>2021年7月: 我们的工作<font color="#FF0000"> ‘ShakeReader’ </font>的期刊版本被<font color="#0000FF">IEEE TMC</font>接收！<br /></h4>
 							<h4>2021年5月: 我们设计的<font color="#FF0000"> ‘基于声信号的低成本液体造假检测系统’ </font>获得了<font color="#0000FF">第四届中国（上海）国际发明创新展览会金奖</font>！<br /></h4>
@@ -77,7 +78,7 @@
 							<h4>2020年10月: 我们的工作<font color="#FF0000"> ‘RobuCIR’ </font>的期刊版本发表在<font color="#0000FF">IEEE TMC</font>！<br /></h4>
 							<h4>2020年7月: 我们的工作<font color="#FF0000"> ‘RobuCIR’ </font>获得了<font color="#0000FF">INFOCOM 2020最佳论文奖</font>！&#128516;&#128516;<br /></h4>
 							<!-- <h4>2020年7月: 我被授予<font color="#0000FF">INFOCOM 2020 Student Travel Grant</font>！&#128516;<br /></h4> -->
-							<h4>2019年12月: 我们的工作<font color="#FF0000"> ‘RobuCIR’ </font>被<font color="#0000FF">INFOCOM 2020</font>接收！<br /></h4>
+							<!-- <h4>2019年12月: 我们的工作<font color="#FF0000"> ‘RobuCIR’ </font>被<font color="#0000FF">INFOCOM 2020</font>接收！<br /></h4> -->
 							<h4>2019年4月: 我们的工作<font color="#FF0000"> ‘TagBreathe’ </font>的期刊版本发表在<font color="#0000FF">IEEE TMC</font>！<br /></h4>
 							<h4>2018年12月: 我们的工作<font color="#FF0000"> ‘TACT’ </font>发表在<font color="#0000FF">ACM IMWUT (UbiComp 2019)</font>！<br /></h4>
 							<h4>2018年1月: 我们的工作<font color="#FF0000"> ‘SDN-ECCKN’ </font>获得了<font color="#0000FF">JNCA 2017唯一最佳论文奖</font>！&#128516;&#128516;</h4>
