--- a/chs/index_chs.html
+++ b/chs/index_chs.html
@@ -31,6 +31,17 @@
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/jpswalsh/academicons@1/css/academicons.min.css">
 	</head>
+	
+	<!-- Google tag (gtag.js) -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=G-JT7G3WCC2R"></script>
+        <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'G-JT7G3WCC2R');
+        </script>
+	
 	<body class="is-preload">
 	
 <!--	<button class="button button2">Blue</button>  -->
