--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
 					<div class="row">
 					    <div class="col-12 col-6-medium col-12-small">
 							<article class="box style2">
-								<a href="#" class="image featured"><img src="./images/hearfire.jpg" alt="" /></a>
+								<a href="#" class="image featured"><img src="./images/nfchain.jpg" alt="" /></a>
 								<h3>NFC tag authentication</h3>
 								<div align="left">
 								<p><strong>Key techniques：</strong> NFC tag, physical-layer hardware fingerprinting, authentication<br /><strong>Publications:</strong><br >[1] <font color="#FF0000">[INFOCOM'23]</font> Yanni Yang, Jiannong Cao, Zhenlin An, <strong>Yanwen Wang</strong>, Pengfei Hu, and Guoming Zhang, "NFChain: A Practical Fingerprinting Scheme for NFC Tag Authentication," in IEEE INFOCOM 2023, accepted. <strong>(CCF A) </strong></p> <!-- <a href="./papers/hearfire.pdf"><i class="fa fa-file-pdf-o" style="font-size:24px;color:red"></i></a></p>-->
