--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
 								<a href="#" class="image featured"><img src="./images/nfchain.jpg" alt="" /></a>
 								<h3>NFC tag authentication</h3>
 								<div align="left">
-								<p><strong>Key techniques：</strong> NFC tag, physical-layer hardware fingerprinting, authentication<br /><strong>Publications:</strong><br >[1] <font color="#FF0000">[INFOCOM'23]</font> Yanni Yang, Jiannong Cao, Zhenlin An, <strong>Yanwen Wang</strong>, Pengfei Hu, and Guoming Zhang, "NFChain: A Practical Fingerprinting Scheme for NFC Tag Authentication," in IEEE INFOCOM 2023, accepted. <strong>(CCF A) </strong></p> <!-- <a href="./papers/hearfire.pdf"><i class="fa fa-file-pdf-o" style="font-size:24px;color:red"></i></a></p>-->
+								<p><strong>Key techniques：</strong> NFC tag, physical-layer hardware fingerprinting, authentication<br /><strong>Publications:</strong><br >[1] <font color="#FF0000">[INFOCOM'23]</font> Yanni Yang, Jiannong Cao, Zhenlin An, <strong>Yanwen Wang</strong>, Pengfei Hu, and Guoming Zhang, "NFChain: A Practical Fingerprinting Scheme for NFC Tag Authentication," in IEEE INFOCOM 2023, accepted. <strong>(CCF A) </strong> <a href="./papers/multivib.pdf"><i class="fa fa-file-pdf-o" style="font-size:24px;color:red"></i></a></p>
 								</div>
 							</article>
 						</div>
