--- a/chs/index_chs.html
+++ b/chs/index_chs.html
@@ -373,7 +373,7 @@
 							<div align="left">
 								<span class="icon featured fa-file "></span>
 								<h3>主持</h3>
-								<p>1. <strong>国家自然科学基金（青年科学基金项目）</strong>，2022.1-2024.12，湖南大学（编号：62102139） <br />2. <strong>中央高校基本科研业务费项目</strong>，2021.1-2024.12，湖南大学（编号：531118010612）</p>	
+								<p>1. <strong>国家自然科学基金（青年科学基金项目）</strong>，2022.1-2024.12，湖南大学（编号：62102139） <br />2. <strong>湖南省自然科学基金（面上科学基金项目）</strong>，2022.1-2024.12，湖南大学（编号：2022JJ30168） <br />3. <strong>中央高校基本科研业务费项目</strong>，2021.1-2024.12，湖南大学（编号：531118010612）</p>	
 								<h3>核心参与人</h3>
 								<p>1. <strong>国家自然科学基金（青年科学基金项目）：</strong>RFID 跨层优化及实验平台研究，2018.1-2020.12，香港理工大学深圳研究院（编号：信息科学部61702437）<br />2. <strong>2017年度广东省大数据分析与处理重点实验室开放基金：</strong>基于多源融合用户画像的游戏平台商业化数据分析技术研究与系统开发，2017.1-2017.12，火烈鸟网络（广州）股份有限公司（编号：广东省大数据分析与处理重点实验室2017017）<br />3. <strong>2017年度广州市天河区科技计划：</strong>基于商业智能分析的互动娱乐行业内容分发和渠道管理大数据平台的研发，2017.1-2017.12，火烈鸟网络（广州）股份有限公司（编号：天河区科工信局201701YG127）<br />4. <strong>2016年度广州市天河区科技计划：</strong>面向移动游戏行业的智能化运营及垂直分销大数据服务平台的研制与应用，2016.1-2016.12，火烈鸟网络（广州）股份有限公司（编号：天河区科工信局201601YG152）<br />5. <strong>2015广东省自然基金自由申请项目：</strong>基于特征信号聚类的无线传感器网络防入侵技术的研究，2014.10-2016.9，广州中国科学院先进技术研究所 （编号：广东省科技厅2014A030313685）<br />6. <strong>2015深圳市基础研究项目：</strong>基于综合数据聚类的无线传感器网络入侵监测的研究，2015.1-2016.12，广州中国科学院先进技术研究所（编号：深圳科创委JCYJ20140417113430604）<br />7. <strong>2014中国民航大学省部级科研机构开放基金：</strong>基于特征信号聚类的无线传感器网络防入侵技术的研究，2014.10– 2016.9，广州中国科学院先进技术研究所（编号：中国民航大学CAAC-ITRB-201406）<br />8. <strong>佛山院市合作项目：</strong>基于信息加密传输的智能家居系统，2014.6-2016.5，广州中国科学院先进技术研究所（编号：佛山科技局2014HK100103）</p>
 								<h3>参与人</h3>
