--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
 							<a href="#work" class="button large scrolly">My Bio<br /></a>
 							<h2><strong></strong><br /></h2>
 							<h2><strong>News</strong><br /></h2>
+							<h4>2022, December: Our work <font color="#FF0000">'RemoteGuesture'</font> was accepted by <font color="#0000FF">IEEE SECON 2023</font>!<br /></h4>
 							<h4>2022, December: Our work <font color="#FF0000">'RFChain'</font> was accepted by <font color="#0000FF">IEEE INFOCOM 2023</font>!<br /></h4>
 							<h4>2022, December: Two of our works <font color="#FF0000">'HearFire'</font> and <font color="#FF0000">'Multi-Vib'</font> were published to <font color="#0000FF">ACM IMWUT (UbiComp 2023)</font>!<br /></h4>
 							<h4>2022, January: Our work <font color="#FF0000">'HearLiquid'</font> was accepted by <font color="#0000FF">IEEE IOTJ</font>!<br /></h4>
@@ -71,8 +72,8 @@
 							<h4>2020, July: Our work <font color="#FF0000">'RobuCIR'</font> won <font color="#0000FF">INFOCOM 2020 Best Paper Award</font>! &#128516;&#128516;<br /></h4>
 							<!-- <h4>2020, July: I was awarded <font color="#0000FF">INFOCOM 2020 Student Travel Grant</font>! &#128516;<br /></h4> -->
 							<!--<h4>2019, December: Our work <font color="#FF0000">'RobuCIR'</font> was accepted to appear to <font color="#0000FF">INFOCOM 2020</font>!<br /></h4>-->
-							<h4>2019, April: Our journal version of <font color="#FF0000">'TagBreathe'</font> was published to <font color="#0000FF">IEEE TMC</font>!<br /></h4>
-							<h4>2018, December: Our work <font color="#FF0000">'TACT'</font> was published to <font color="#0000FF">ACM IMWUT (UbiComp 2019)</font>!<br /></h4>
+							<!-- <h4>2019, April: Our journal version of <font color="#FF0000">'TagBreathe'</font> was published to <font color="#0000FF">IEEE TMC</font>!<br /></h4> -->
+							<!-- <h4>2018, December: Our work <font color="#FF0000">'TACT'</font> was published to <font color="#0000FF">ACM IMWUT (UbiComp 2019)</font>!<br /></h4> -->
 							<!-- <h4>2018, January: Our work <font color="#FF0000">'SDN-ECCKN'</font> was awarded <font color="#0000FF">JNCA 2017 Best Research Paper</font>!&#128516;&#128516;</h4> -->
 							<!-- <h4>2017, July: Our work <font color="#FF0000">'TagBreathe'</font> was accepted and published to <font color="#0000FF">IEEE ICDCS 2017</font>!</h4> -->
 							
@@ -241,7 +242,7 @@
 								<a href="#" class="image featured"><img src="./images/pic03.png" alt="" /></a>
 								<h3>Gesture Identification</h3>
 							    <div align="left">
-								<p><strong>Key techniques：</strong> Acoustic sensing, Signal processing<br /><strong>Publications：<br ></strong>[1] <font color="#FF0000">[TMC]</font> <strong>Y. Wang</strong>, J. Shen and Y. Zheng, "Push the Limit of Acoustic Gesture Recognition," in IEEE Transactions on Mobile Computing, 2020. (<strong>CCF A</strong>) <a href="./papers/16TMC3032278_proof.pdf"><i class="fa fa-file-pdf-o" style="font-size:24px;color:red"></i></a><br />[2] <font color="#FF0000">[INFOCOM 2020]</font> <strong>Y. Wang</strong>, J. Shen and Y. Zheng, "Push the Limit of Acoustic Gesture Recognition," in IEEE INFOCOM 2020. <strong><font color="#FF0000">[Best Paper Award]</font></strong> <strong>(CCF A)</strong> <a href="./papers/infocom2020.pdf"><i class="fa fa-file-pdf-o" style="font-size:24px;color:red"></i></a> <a href="./papers/infocom.mp4"><i class="fa fa-video-camera" style="font-size:24px;color:red"></i></a> <a href="./papers/infocom_slide.pdf"><i class="fa fa-file-powerpoint-o" style="font-size:24px;color:red"></i></a></p>
+								<p><strong>Key techniques：</strong> Acoustic sensing, Signal processing<br /><strong>Publications：<br ></strong>[1] <font color="#FF0000">[SECON 2023]</font> M. Tian, <strong>Y. Wang</strong>, Z. Wang, J. Situ, X. Sun, X. Shi, C. Zhang and J. Shen, "RemoteGesture: Room-scale Acoustic Gesture Recognition for Multiple Users," in IEEE SECON, 2023, accepted. (<strong>CCF B</strong>)<br />[2] <font color="#FF0000">[TMC]</font> <strong>Y. Wang</strong>, J. Shen and Y. Zheng, "Push the Limit of Acoustic Gesture Recognition," in IEEE Transactions on Mobile Computing, 2020. (<strong>CCF A</strong>) <a href="./papers/16TMC3032278_proof.pdf"><i class="fa fa-file-pdf-o" style="font-size:24px;color:red"></i></a><br />[3] <font color="#FF0000">[INFOCOM 2020]</font> <strong>Y. Wang</strong>, J. Shen and Y. Zheng, "Push the Limit of Acoustic Gesture Recognition," in IEEE INFOCOM 2020. <strong><font color="#FF0000">[Best Paper Award]</font></strong> <strong>(CCF A)</strong> <a href="./papers/infocom2020.pdf"><i class="fa fa-file-pdf-o" style="font-size:24px;color:red"></i></a> <a href="./papers/infocom.mp4"><i class="fa fa-video-camera" style="font-size:24px;color:red"></i></a> <a href="./papers/infocom_slide.pdf"><i class="fa fa-file-powerpoint-o" style="font-size:24px;color:red"></i></a></p>
 								</div>
 							</article>
 						</div>	
