--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
 							<a href="#work" class="button large scrolly">My Bio<br /></a>
 							<h2><strong></strong><br /></h2>
 							<h2><strong>News</strong><br /></h2>
+							<h4>2024, December: Our work <font color="#FF0000">'UltraFlame'</font> was accepted by <font color="#0000FF">IEEE INFOCOM 2025</font>!<br /></h4>
 							<h4>2024, October: Our work <font color="#FF0000">'LoDiHAR'</font> was accepted by <font color="#0000FF">IEEE SECON 2024</font>!<br /></h4>
 							<h4>2024, August: Our <font color="#FF0000">'Adversarial Attack Defense Flatform'</font> was accepted by <font color="#0000FF">IEEE TII</font>!<br /></h4>
 							<h4>2023, June: Our work <font color="#FF0000">'RemoteGesture'</font> was accepted by <font color="#0000FF">IEEE SECON 2023</font>!<br /></h4>
