--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
 								<a href="#" class="image featured"><img src="./images/nfchain.jpg" alt="" /></a>
 								<h3>NFC tag authentication</h3>
 								<div align="left">
-								<p><strong>Key techniques：</strong> NFC tag, physical-layer hardware fingerprinting, authentication<br /><strong>Publications:</strong><br >[1] <font color="#FF0000">[INFOCOM'23]</font> Yanni Yang, Jiannong Cao, Zhenlin An, <strong>Yanwen Wang</strong>, Pengfei Hu, and Guoming Zhang, "NFChain: A Practical Fingerprinting Scheme for NFC Tag Authentication," in IEEE INFOCOM 2023, accepted. <strong>(CCF A) </strong></p> <!-- <a href="./papers/hearfire.pdf"><i class="fa fa-file-pdf-o" style="font-size:24px;color:red"></i></a></p>-->
+								<p><strong>Key techniques：</strong> NFC tag, physical-layer hardware fingerprinting, authentication<br /><strong>Publications:</strong><br >[1] <font color="#FF0000">[INFOCOM'23]</font> Y. Yang, J. Cao, Z. An, <strong>Y. Wang</strong>, P. Hu, and G. Zhang, "NFChain: A Practical Fingerprinting Scheme for NFC Tag Authentication," in IEEE INFOCOM 2023, accepted. <strong>(CCF A) </strong></p> <!-- <a href="./papers/hearfire.pdf"><i class="fa fa-file-pdf-o" style="font-size:24px;color:red"></i></a></p>-->
 								</div>
 							</article>
 						</div>
@@ -195,7 +195,7 @@
 								<a href="#" class="image featured"><img src="./images/hearfire.jpg" alt="" /></a>
 								<h3>We can 'HEAR' the fire</h3>
 								<div align="left">
-								<p><strong>Key techniques：</strong> Acoustic sensing, Sound absorption, Sound speed variation, CIR<br /><strong>Publications:</strong><br >[1] <font color="#FF0000">[INFOCOM'25]</font> Zheng Wang, Xiaoqi Sun, Yuanqing Zheng, <strong>Yanwen Wang*</strong>, "Push the Limit of Acoustic Indoor Fire Monitoring," In INFOCOM 2025, accepted. (<strong>CCF A</strong>)<br />[2] <font color="#FF0000">[UbiComp'23]</font> Zheng Wang, <strong>Yanwen Wang</strong>, Mi Tian and Jiaxing Shen*, "HearFire: Indoor Fire Detection via Inaudible Acoustic Sensing," Proc. ACM Interact. Mob. Wearable Ubiquitous Technol. 6, 4, Article 185 (December 2022), 25 pages. <strong>(CCF A) </strong> <a href="./papers/hearfire.pdf"><i class="fa fa-file-pdf-o" style="font-size:24px;color:red"></i></a></p>
+								<p><strong>Key techniques：</strong> Acoustic sensing, Sound absorption, Sound speed variation, CIR<br /><strong>Publications:</strong><br >[1] <font color="#FF0000">[INFOCOM'25]</font> Z. Wang, X. Sun, Y. Zheng, <strong>Y. Wang*</strong>, "Push the Limit of Acoustic Indoor Fire Monitoring," In INFOCOM 2025, accepted. (<strong>CCF A</strong>)<br />[2] <font color="#FF0000">[UbiComp'23]</font> Z. Wang, <strong>Y. Wang</strong>, M. Tian and J. Shen*, "HearFire: Indoor Fire Detection via Inaudible Acoustic Sensing," Proc. ACM Interact. Mob. Wearable Ubiquitous Technol. 6, 4, Article 185 (December 2022), 25 pages. <strong>(CCF A) </strong> <a href="./papers/hearfire.pdf"><i class="fa fa-file-pdf-o" style="font-size:24px;color:red"></i></a></p>
 								</div>
 							</article>
 						</div>
@@ -205,7 +205,7 @@
 								<a href="#" class="image featured"><img src="./images/multivib.jpg" alt="" /></a>
 								<h3>Multiple points' vibration monitoring using mmWave radar</h3>
 								<div align="left">
-								<p><strong>Key techniques：</strong> FMCW, mmWave radar, Vibration monitoring, Corner reflector<br /><strong>Publications:</strong><br >[1] <font color="#FF0000">[UbiComp'23]</font> Yanni Yang, Huafeng Xu, Qianyi Chen, Jiannong Cao, and <strong>Yanwen Wang*</strong>, "Multi-Vib: Precise Multi-point Vibration Monitoring Using mmWave Radar," Proc. ACM Interact. Mob. Wearable Ubiquitous Technol. 6, 4, Article 192 (December 2022), 26 pages. <strong>(CCF A) </strong> <a href="./papers/multivib.pdf"><i class="fa fa-file-pdf-o" style="font-size:24px;color:red"></i></a></p>
+								<p><strong>Key techniques：</strong> FMCW, mmWave radar, Vibration monitoring, Corner reflector<br /><strong>Publications:</strong><br >[1] <font color="#FF0000">[UbiComp'23]</font> Y. Yang, H. Xu, Q. Chen, J. Cao, and <strong>Y. Wang*</strong>, "Multi-Vib: Precise Multi-point Vibration Monitoring Using mmWave Radar," Proc. ACM Interact. Mob. Wearable Ubiquitous Technol. 6, 4, Article 192 (December 2022), 26 pages. <strong>(CCF A) </strong> <a href="./papers/multivib.pdf"><i class="fa fa-file-pdf-o" style="font-size:24px;color:red"></i></a></p>
 								</div>
 							</article>
 						</div>
@@ -215,7 +215,7 @@
 								<a href="#" class="image featured"><img src="./images/HearLiquid.jpg" alt="" /></a>
 								<h3>We can ‘HEAR’ the liquid fraud</h3>
 								<div align="left">
-								<p><strong>Key techniques：</strong> Acoustic sensing, Auto-encoding, Data augmentation<br /><strong>Publications:</strong><br >[1] <font color="#FF0000">[IEEE IOTJ]</font> Yanni Yang, <strong>Yanwen Wang*</strong>, Jiannong Cao and Jinlin Chen, "HearLiquid: Non-intrusive Liquid Fraud Detection Using Commodity Acoustic Devices," in IEEE Internet of Things Journal, vol. 9, no. 15, pp. 13582-13597, 1 Aug.1, 2022. <strong>(SCI, JCR Q1) </strong> <a href="./papers/hearliquid.pdf"><i class="fa fa-file-pdf-o" style="font-size:24px;color:red"></i></a></p>
+								<p><strong>Key techniques：</strong> Acoustic sensing, Auto-encoding, Data augmentation<br /><strong>Publications:</strong><br >[1] <font color="#FF0000">[IEEE IOTJ]</font> Y. Yang, <strong>Y. Wang*</strong>, J. Cao and J. Chen, "HearLiquid: Non-intrusive Liquid Fraud Detection Using Commodity Acoustic Devices," in IEEE Internet of Things Journal, vol. 9, no. 15, pp. 13582-13597, 1 Aug.1, 2022. <strong>(SCI, JCR Q1) </strong> <a href="./papers/hearliquid.pdf"><i class="fa fa-file-pdf-o" style="font-size:24px;color:red"></i></a></p>
 								</div>
 							</article>
 						</div>	
@@ -225,7 +225,7 @@
 								<a href="#" class="image featured"><img src="./images/low-cost.jpg" alt="" /></a>
 								<h3>A Low-cost RFID System for Distributed Parallel Sensing</h3>
 								<div align="left">
-								<p><strong>Key techniques：</strong> RFID, Software Defined Reader, Cross-technology communication, Distributed sensing<br /><strong>Publications:</strong><br >[1] <font color="#FF0000">[SECON 2024]</font> Xiaoqi Sun, <strong>Yanwen Wang*</strong>, Chenwei Zhang, Zheng Wang, Xiaokang Shi and Yuanqing Zheng, "LoDiHAR: A Low-Cost Distributed Human Activity Recognition System Based on RFID," in IEEE SECON, 2024, accepted. (<strong>CCF B</strong>)<br />[2] <font color="#FF0000">[IEEE IOTJ]</font> <strong>Yanwen Wang</strong>, Jiannong Cao and Yuanqing Zheng, "Toward A Low-cost Software-Defined UHF RFID System for Distributed Parallel Sensing," in IEEE Internet of Things Journal, vol. 8, no. 17, pp. 13664-13676, 1 Sept.1, 2021. <strong>(SCI, JCR Q1) </strong> <a href="./papers/low-cost.pdf"><i class="fa fa-file-pdf-o" style="font-size:24px;color:red"></i></a></p>
+								<p><strong>Key techniques：</strong> RFID, Software Defined Reader, Cross-technology communication, Distributed sensing<br /><strong>Publications:</strong><br >[1] <font color="#FF0000">[SECON 2024]</font> X. Sun, <strong>Y. Wang*</strong>, C. Zhang, Z. Wang, X. Shi and Y. Zheng, "LoDiHAR: A Low-Cost Distributed Human Activity Recognition System Based on RFID," in IEEE SECON, 2024, accepted. (<strong>CCF B</strong>)<br />[2] <font color="#FF0000">[IEEE IOTJ]</font> <strong>Y. Wang</strong>, J. Cao and Y. Zheng, "Toward A Low-cost Software-Defined UHF RFID System for Distributed Parallel Sensing," in IEEE Internet of Things Journal, vol. 8, no. 17, pp. 13664-13676, 1 Sept.1, 2021. <strong>(SCI, JCR Q1) </strong> <a href="./papers/low-cost.pdf"><i class="fa fa-file-pdf-o" style="font-size:24px;color:red"></i></a></p>
 								</div>
 							</article>
 						</div>		
@@ -414,9 +414,9 @@
 							<div align="left">
 								<span class="icon featured fa-file "></span>
 								<h3>TPC</h3>
-								<p>1. IEEE RTCSA<br />2. IEEE MASS<br />3. IEEE ICPADS<br /></p>
+								<p>1. IEEE ICDCS<br />2. IEEE RTCSA<br />3. IEEE MASS<br />4. IEEE ICPADS<br /></p>
 								<h3>Reviewer</h3>
-								<p>1. IEEE Transactions on Mobile Computing<br />2. IEEE Transactions on Wireless Communications<br />3. ACM Computing Surveys<br />4. ACM IMWUT (Ubicomp)<br />5. IEEE Internet of Things Journal<br />6. ACM Transactions on Intelligent Systems and Technology<br />7. IEEE System Journal<br /></p>
+								<p>1. IEEE Transactions on Mobile Computing<br />2. IEEE Transactions on Wireless Communications<br />3. ACM Computing Surveys<br />4. ACM IMWUT (Ubicomp)<br />5. IEEE Transactions on Intelligent Transportation Systems<br />6. IEEE Internet of Things Journal<br />7. ACM Transactions on Intelligent Systems and Technology<br />8. Elsevier Computer Networks System Journal<br />9. IEEE System Journal<br /></p>
 						    </div>
 							</section>
 						</div>
