--- a/chs/index_chs.html
+++ b/chs/index_chs.html
@@ -453,7 +453,8 @@
 			<script src="assets/js/breakpoints.min.js"></script>
 			<script src="assets/js/util.js"></script>
 			<script src="assets/js/main.js"></script>
-			<script type="text/javascript" src="//ra.revolvermaps.com/0/0/6.js?i=040h8g0rcyu&amp;m=7&amp;c=e63100&amp;cr1=ffffff&amp;f=arial&amp;l=0&amp;bv=90&amp;lx=-420&amp;ly=420&amp;hi=20&amp;he=7&amp;hc=a8ddff&amp;rs=80" async="async"></script>
+			<script type="text/javascript" id="clustrmaps" src="//clustrmaps.com/map_v2.js?d=uYfM0-p3KzvOdie0DuSFYF9075KlwH6LHFbu7MxPmLU"></script>
+			<!--<script type="text/javascript" src="//ra.revolvermaps.com/0/0/6.js?i=040h8g0rcyu&amp;m=7&amp;c=e63100&amp;cr1=ffffff&amp;f=arial&amp;l=0&amp;bv=90&amp;lx=-420&amp;ly=420&amp;hi=20&amp;he=7&amp;hc=a8ddff&amp;rs=80" async="async"></script>-->
 			<!--<a href="https://clustrmaps.com/site/1amyr" title="Visit tracker"><img src="//www.clustrmaps.com/map_v2.png?d=qkA2NC7ECtvfxAbwDhTvlMZc7TJwRaM0rhy2M-ZAig4&cl=ffffff"></a>
 			<script type="text/javascript" id="clstr_globe" src="//cdn.clustrmaps.com/globe.js?d=qkA2NC7ECtvfxAbwDhTvlMZc7TJwRaM0rhy2M-ZAig4"></script>-->
 
